SUBDIRS = default heroes imperial monsters orcs
MAINTAINERCLEANFILES= Makefile.in

freelordsarmydatadir = $(datadir)/freelords/army
freelordsarmydata_DATA = \
    default.xml \
	imperial.xml \
    monsters.xml \
	orcs.xml \
	heroes.xml

EXTRA_DIST = \
    default.xml \
	imperial.xml \
    monsters.xml \
	orcs.xml \
	heroes.xml
