SUBDIRS = . editor
MAINTAINERCLEANFILES= Makefile.in

gladedir = $(datadir)/lordsawar/glade
glade_DATA = \
army-gains-level-dialog.glade \
army-info-window.glade \
stack-info-window.glade \
buy-production-dialog.glade \
city-defeated-dialog.glade \
city-looted-dialog.glade \
city-pillaged-dialog.glade \
city-sacked-dialog.glade \
city-window.glade \
destination-dialog.glade \
fight-window.glade \
game-loaded-dialog.glade \
player-died-dialog.glade \
game-over-dialog.glade \
game-preferences-dialog.glade \
game-window.glade \
hero-dialog.glade \
hero-offer-dialog.glade \
surrender-dialog.glade \
sage-dialog.glade \
ruin-rewarded-dialog.glade \
ruin-report-dialog.glade \
history-report-dialog.glade \
report-dialog.glade \
load-scenario-dialog.glade \
medal-awarded-dialog.glade \
quest-assigned-dialog.glade \
quest-expired-dialog.glade \
preferences-dialog.glade \
ruinfight-finished-dialog.glade \
ruinfight-started-dialog.glade \
ruin-searched-dialog.glade \
splash-window.glade \
temple-visit-dialog.glade \
disband-stack-dialog.glade \
hero-brings-allies-dialog.glade \
military-advisor-dialog.glade \
next-player-turn-dialog.glade \
city-rename-dialog.glade \
city-raze-dialog.glade \
city-razed-dialog.glade \
signpost-change-dialog.glade \
fight-order-dialog.glade \
hero-levels-dialog.glade \
player-resign-dialog.glade \
army-bonus-dialog.glade \
item-bonus-dialog.glade \
game-options-dialog.glade \
triumphs-dialog.glade \
diplomacy-report-dialog.glade \
diplomacy-dialog.glade \
treachery-dialog.glade \
stack-info-dialog.glade \
game-quit-dialog.glade \
about-dialog.glade

EXTRA_DIST = $(glade_DATA)
