SUBDIRS = . editor
MAINTAINERCLEANFILES= Makefile.in

gladedir = $(datadir)/lordsawar/glade
glade_DATA = \
army-gains-level-dialog.glade \
army-info-window.glade \
stack-info-window.glade \
buy-production-dialog.glade \
city-defeated-dialog.glade \
city-looted-dialog.glade \
city-pillaged-dialog.glade \
city-sacked-dialog.glade \
city-window.glade \
destination-dialog.glade \
fight-window.glade \
game-loaded-dialog.glade \
player-died-dialog.glade \
game-over-dialog.glade \
game-preferences-dialog.glade \
game-window.glade \
hero-dialog.glade \
hero-offer-dialog.glade \
surrender-dialog.glade \
surrender-refused-dialog.glade \
sage-dialog.glade \
ruin-rewarded-dialog.glade \
ruin-report-dialog.glade \
history-report-dialog.glade \
report-dialog.glade \
load-scenario-dialog.glade \
medal-awarded-dialog.glade \
quest-assigned-dialog.glade \
quest-expired-dialog.glade \
preferences-dialog.glade \
ruinfight-finished-dialog.glade \
ruinfight-started-dialog.glade \
ruin-searched-dialog.glade \
splash-window.glade \
temple-visit-dialog.glade \
disband-stack-dialog.glade \
hero-brings-allies-dialog.glade \
military-advisor-dialog.glade \
next-player-turn-dialog.glade \
city-rename-dialog.glade \
city-raze-dialog.glade \
city-razed-dialog.glade \
signpost-change-dialog.glade \
fight-order-dialog.glade \
hero-levels-dialog.glade \
player-resign-dialog.glade \
player-resign-completed-dialog.glade \
army-bonus-dialog.glade \
item-bonus-dialog.glade \
game-options-dialog.glade \
triumphs-dialog.glade \
diplomacy-report-dialog.glade \
diplomacy-dialog.glade \
treachery-dialog.glade \
stack-info-dialog.glade \
game-quit-dialog.glade \
about-dialog.glade \
new-network-game-dialog.glade \
game-lobby-dialog.glade \
pick-network-game-to-join-dialog.glade \
generation-progress-window.glade

EXTRA_DIST = $(glade_DATA) \
README \
army-gains-level-dialog.glade.h \
army-info-window.glade.h \
stack-info-window.glade.h \
buy-production-dialog.glade.h \
city-defeated-dialog.glade.h \
city-looted-dialog.glade.h \
city-pillaged-dialog.glade.h \
city-sacked-dialog.glade.h \
city-window.glade.h \
destination-dialog.glade.h \
fight-window.glade.h \
game-loaded-dialog.glade.h \
player-died-dialog.glade.h \
game-over-dialog.glade.h \
game-preferences-dialog.glade.h \
game-window.glade.h \
hero-dialog.glade.h \
hero-offer-dialog.glade.h \
surrender-dialog.glade.h \
surrender-refused-dialog.glade.h \
sage-dialog.glade.h \
ruin-rewarded-dialog.glade.h \
ruin-report-dialog.glade.h \
history-report-dialog.glade.h \
report-dialog.glade.h \
load-scenario-dialog.glade.h \
medal-awarded-dialog.glade.h \
quest-assigned-dialog.glade.h \
quest-expired-dialog.glade.h \
preferences-dialog.glade.h \
ruinfight-finished-dialog.glade.h \
ruinfight-started-dialog.glade.h \
ruin-searched-dialog.glade.h \
splash-window.glade.h \
temple-visit-dialog.glade.h \
disband-stack-dialog.glade.h \
hero-brings-allies-dialog.glade.h \
military-advisor-dialog.glade.h \
next-player-turn-dialog.glade.h \
city-rename-dialog.glade.h \
city-raze-dialog.glade.h \
city-razed-dialog.glade.h \
signpost-change-dialog.glade.h \
fight-order-dialog.glade.h \
hero-levels-dialog.glade.h \
player-resign-dialog.glade.h \
army-bonus-dialog.glade.h \
item-bonus-dialog.glade.h \
game-options-dialog.glade.h \
triumphs-dialog.glade.h \
diplomacy-report-dialog.glade.h \
diplomacy-dialog.glade.h \
treachery-dialog.glade.h \
stack-info-dialog.glade.h \
game-quit-dialog.glade.h \
about-dialog.glade.h \
new-network-game-dialog.glade.h \
game-lobby-dialog.glade.h \
pick-network-game-to-join-dialog.glade.h \
player-resign-completed-dialog.glade

##to generate the .h files, run this:
##find ./ -name "*.glade"  -exec intltool-extract --type=gettext/glade '{}' \;
##be sure to add new files to po/POTFILES.in
