SUBDIRS = . editor
MAINTAINERCLEANFILES= Makefile.in

gladedir = $(datadir)/lordsawar/glade
glade_DATA = \
army-gains-level-dialog.ui \
army-info-window.ui \
city-info-window.ui \
stack-info-window.ui \
buy-production-dialog.ui \
city-defeated-dialog.ui \
city-looted-dialog.ui \
city-pillaged-dialog.ui \
city-sacked-dialog.ui \
city-window.ui \
destination-dialog.ui \
fight-window.ui \
game-loaded-dialog.ui \
player-died-dialog.ui \
game-over-dialog.ui \
game-preferences-dialog.ui \
game-window.ui \
hero-dialog.ui \
hero-offer-dialog.ui \
surrender-dialog.ui \
surrender-refused-dialog.ui \
sage-dialog.ui \
ruin-rewarded-dialog.ui \
ruin-report-dialog.ui \
item-report-dialog.ui \
history-report-dialog.ui \
report-dialog.ui \
load-scenario-dialog.ui \
medal-awarded-dialog.ui \
quest-assigned-dialog.ui \
quest-report-dialog.ui \
quest-expired-dialog.ui \
preferences-dialog.ui \
main-preferences-dialog.ui \
ruinfight-finished-dialog.ui \
ruinfight-started-dialog.ui \
ruin-searched-dialog.ui \
splash-window.ui \
temple-visit-dialog.ui \
disband-stack-dialog.ui \
hero-brings-allies-dialog.ui \
military-advisor-dialog.ui \
next-player-turn-dialog.ui \
city-rename-dialog.ui \
city-raze-dialog.ui \
city-razed-dialog.ui \
signpost-change-dialog.ui \
fight-order-dialog.ui \
hero-levels-dialog.ui \
player-resign-dialog.ui \
player-resign-completed-dialog.ui \
army-bonus-dialog.ui \
item-bonus-dialog.ui \
game-options-dialog.ui \
triumphs-dialog.ui \
diplomacy-report-dialog.ui \
diplomacy-dialog.ui \
treachery-dialog.ui \
stack-info-dialog.ui \
game-quit-dialog.ui \
about-dialog.ui \
new-network-game-dialog.ui \
new-profile-dialog.ui \
game-lobby-dialog.ui \
pick-network-game-to-join-dialog.ui \
new-random-map-dialog.ui \
use-item-dialog.ui \
use-item-on-player-dialog.ui \
use-item-on-city-dialog.ui \
game-button-box-desktop.ui \
game-button-box-netbook.ui \
game-button-box-large-screen.ui

EXTRA_DIST = $(glade_DATA) \
README
