MAINTAINERCLEANFILES= Makefile.in

musicdir = $(datadir)/lordsawar/music
music_DATA = \
	back1.ogg \
	defeat.ogg \
	defeat1.ogg \
	victory.ogg \
	victory1.ogg \
	hero.ogg \
	intro.ogg \
	music.xml

EXTRA_DIST = \
	back1.ogg \
	defeat.ogg \
	defeat1.ogg \
	victory.ogg \
	victory1.ogg \
	hero.ogg \
	intro.ogg \
	music.xml
