MAINTAINERCLEANFILES= Makefile.in

musicdir = $(datadir)/lordsawar/music
music_DATA = \
	back1.ogg \
	defeat.ogg \
	victory.ogg \
	hero.ogg \
	intro.ogg \
	battle.ogg \
        bless.ogg \
	music.xml

EXTRA_DIST = \
	README \
	back1.ogg \
	defeat.ogg \
	victory.ogg \
	hero.ogg \
	intro.ogg \
	battle.ogg \
        bless.ogg \
	music.xml
