SUBDIRS = items editor

MAINTAINERCLEANFILES= Makefile.in

variousdir = $(datadir)/lordsawar/various
various_DATA = \
    arrows.png \
    waypoints.png \
    buttons.png \
    city_occupied.png \
    items.png \
    medals_mask.gif \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    about_screen.jpg \
    network_screen.jpg \
    stats.png \
    win.jpg \
    win_mask.png \
    freelords.png \
    lordsawar_logo.png \
    freelords_editor.png \
    editor.png \
    hero.png \
    prodshieldset.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png

EXTRA_DIST = \
    arrows.png \
    waypoints.png \
    buttons.png \
    city_occupied.png \
    items.png \
    medals_mask.gif \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    about_screen.jpg \
    network_screen.jpg \
    stats.png \
    win.jpg \
    win_mask.png \
    freelords.png \
    lordsawar_logo.png \
    freelords_editor.png \
    editor.png \
    hero.png \
    prodshieldset.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png
