SUBDIRS = items editor

MAINTAINERCLEANFILES= Makefile.in

variousdir = $(datadir)/lordsawar/various
various_DATA = \
    arrows.png \
    waypoints.png \
    buttons.png \
    city_occupied.png \
    medals_mask.png \
    bigmedals.png \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    win.png \
    lordsawar_logo.png \
    hero.png \
    hero-inactive.png \
    prodshieldset.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png \
    tileset_icon.png \
    parley_offered.png \
    parley_refused.png \
    background.png \
    back.bmp \
    hero-newlevel.png

EXTRA_DIST = \
    README \
    arrows.png \
    waypoints.png \
    buttons.png \
    city_occupied.png \
    medals_mask.png \
    bigmedals.png \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    win.png \
    lordsawar_logo.png \
    hero.png \
    hero-inactive.png \
    prodshieldset.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png \
    tileset_icon.png \
    parley_offered.png \
    parley_refused.png \
    background.png \
    back.bmp \
    hero-newlevel.png
