
EXTRA_DIST = $(help_DATA)
helpdir = ${datadir}/gnome/help/lordsawar/C/figures

help_DATA = city_window.png conquer_city.png buy_production.png \
	army_unit_info.png army_bonus.png fight_order.png \
	fight_one_vs_one.png fighting_one_vs_one.png \
	fought_one_vs_one.png fight_city_one_vs_two.png \
	fighting_city_one_vs_two.png fought_city_one_vs_two.png \
	game_options.png main_screen.png main_screen_buttons.png \
	main_screen_move_stack_button.png \
	main_screen_select_next_stack_button.png \
	main_screen_park_stack_button.png \
	main_screen_deselect_stack_button.png \
	main_screen_center_on_stack_button.png \
	main_screen_diplomacy_button.png \
	main_screen_diplomacy_proposed_button.png \
	main_screen_defend_stack_button.png \
	main_screen_stack_search_button.png \
	main_screen_move_all_stacks_button.png \
	main_screen_end_turn_button.png \
	main_screen_move_stack_dir_buttons.png \
	game_lobby.png \
	main_screen_stat_icon_cities.png \
	main_screen_stat_icon_income.png \
	main_screen_stat_icons.png \
	main_screen_stat_icon_treasury.png \
	main_screen_stat_icon_upkeep.png \
	mousecursor_magnifying_glass.png \
	mousecursor_hand.png \
	mousecursor_target.png \
	mousecursor_walk.png \
	mousecursor_boat.png \
	mousecursor_goto.png \
	mousecursor_rook.png 

