
EXTRA_DIST = $(noinst_DATA)
#helpdir = ${datadir}/gnome/help/lordsawar/C/figures

noinst_DATA = city_window.png conquer_city.png buy_production.png \
	      army_unit_info.png army_bonus.png fight_order.png \
	      fight_one_vs_one.png fighting_one_vs_one.png \
	      fought_one_vs_one.png fight_city_one_vs_two.png \
	      fighting_city_one_vs_two.png fought_city_one_vs_two.png \
	      game-options-1.png game-options-2.png main_screen.png \
	      main_screen_buttons.png \
	      main_screen_move_stack_button.png \
	      main_screen_select_next_stack_button.png \
	      main_screen_park_stack_button.png \
	      main_screen_deselect_stack_button.png \
	      main_screen_center_on_stack_button.png \
	      main_screen_diplomacy_button.png \
	      main_screen_diplomacy_proposed_button.png \
	      main_screen_defend_stack_button.png \
	      main_screen_stack_search_button.png \
	      main_screen_move_all_stacks_button.png \
	      main_screen_end_turn_button.png \
	      main_screen_move_stack_dir_buttons.png \
	      game_lobby.png \
	      main_screen_stat_icon_cities.png \
	      main_screen_stat_icon_income.png \
	      main_screen_stat_icons.png \
	      main_screen_stat_icon_treasury.png \
	      main_screen_stat_icon_upkeep.png \
	      mousecursor_magnifying_glass.png \
	      mousecursor_hand.png \
	      mousecursor_target.png \
	      mousecursor_walk.png \
	      mousecursor_boat.png \
	      mousecursor_goto.png \
	      mousecursor_rook.png \
	      main_screen_bag.png \
	      main_screen_bridge.png \
	      main_screen_city.png \
	      main_screen_city_razed.png \
	      main_screen_forest.png \
	      main_screen_hills.png \
	      main_screen_mountains.png \
	      main_screen_move_bonus_flying.png \
	      main_screen_move_bonus_forest.png \
	      main_screen_move_bonus_hills_forest.png \
	      main_screen_move_bonus_hills.png \
	      main_screen_move_bonus_water.png \
	      main_screen_port.png \
	      main_screen_road.png \
	      main_screen_ruin.png \
	      main_screen_selected_stack_flags.png \
	      main_screen_selected_stack_one.png \
	      main_screen_signpost.png \
	      main_screen_stack_info.png \
	      main_screen_stack_tray_4_units.png \
	      main_screen_stack_tray_5_units.png \
	      main_screen_stack_water_defend.png \
	      main_screen_swamp.png \
	      main_screen_temple.png \
	      main_screen_water.png \
	      main_screen_unselected_stack.png
